
Fri Sep 24 16:43:48 EST 1999
(Christian)

Grrr. Added more bugs.


-------------------------------------------------------------------------------

Sat Sep 25 13:03:34 PDT 1999
(Raster)

fix iconbox border going all wierd when in auto resize mode.. :)

-------------------------------------------------------------------------------

Sat Sep 25 13:07:52 PDT 1999
(Raster)

add mroe to the color modifiers comment dialog...

-------------------------------------------------------------------------------

Sun Sep 26 19:37:30 PDT 1999
(Mandrake)

added patch from Martin Tyler <martin@boo.org>
fixes segfaults in modules loading with ipc.


-------------------------------------------------------------------------------

Sun Sep 26 19:45:58 PDT 1999
(Mandrake)

added a bug from the mailing list.

-------------------------------------------------------------------------------

Mon Sep 27 12:12:46 EST 1999
(Christian)

Fixed the segfault that ocurred when switching
to Ganymede from BrushedMetal with a previously
wiped out ~/.enlightenment. The problem was that
a pointer was freed but not set to NULL.

I have a question regarding this: Wouldn't it
be good to set a freed pointer to NULL by default?
For example by changing the Efree macro to

#define Efree(x) \
__Efree(x, __FILE__, __LINE__)\
x = NULL;

or something? Since Efree is called about 700 times 
in E, I really didn't want to mess that up.

-------------------------------------------------------------------------------

Mon Sep 27 12:17:26 PDT 1999
(Mandrake)

fixed the bug where everything in kontrol-center crashed E.  what's really
bizarre is that they were really doing everything the wrong way, creating
windows, mapping them, and then reparenting them into the control center.  I'm
not 100% sure why, but I think I'm going to report this as a bug to the kde
people.  Luckily for me, however, it uncovered a flaw in my "do not manage" kde
support.  Fixed that all up.